--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <activity android:name=".StopActivity"/>
         <activity android:name=".RouteFilter"/>
         <activity android:name=".PlanActivity"/>
-
+        <activity android:name=".StopFilter"/>
     </application>
 
 </manifest>
