--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -39,6 +41,7 @@
         <activity android:name=".BiginFilter"/>
         <activity android:name=".EndFilter"/>
         <activity android:name=".TimeActivity"/>
+        <activity android:name=".MapActivity"/>
 
     </application>
 
